@@ -18,7 +18,7 @@
         <!-- Content -->
         <div class="wrapper" style="height: 1650px;">
             <h2 class="spacing_large">Art Gallery</h2>
-            <p>
+            <p>An art gallery that was created with JavaScript.</p>
             
             <!-- Image Rows -->
             <div id="container">
