@@ -19,7 +19,7 @@
         <div class="wrapper">
             <!-- Warning -->
             <div class="warning"> 
-                <p align="center">Notice! This website is still under construction so some pages may be incomplete.</p> 
+                <p align="center">Notice! This web site is still under construction so some pages may be incomplete.</p> 
             </div>
             
             
@@ -39,8 +39,8 @@
                 <!-- About -->
                 <div id="content" style="width: 860px;">
                     <section class="index_grad clear">
-                            <h4>Hello, welcome to my website.</h4>
-                            <p align="center">This is a website of miscellous projects. It is all created as an intellectual challenge for myself. Feel free to browse around, maybe one of the projects may turn out to be useful for you!</p>	
+                            <h4>Hello, welcome to my web site.</h4>
+                            <p align="center">This is a web site of miscellaneous projects. It was created as an intellectual challenge for myself. Feel free to browse around, maybe one of the projects may turn out to be useful for you!</p>	
                     </section>
                     <div align="center"><img src="https://dmctruong.000webhostapp.com/images/logo.png" width="100px" height="100px"></div>
                     
@@ -55,7 +55,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_projects.png" class="rectangle_image"  alt="">
                                         <figcaption>
                                             <h2>Class Projects</h2>
-                                            <p>This category contains a few projects that were created in class.</p>
+                                            <p>Various projects that were created in class.</p>
                                             <footer class="read_more"><a href="projects.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
@@ -67,7 +67,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_graphics.png" class="rectangle_image" alt="">
                                         <figcaption>
                                             <h2>Computer Graphics</h2>
-                                            <p>Here, all of the projects related to computer graphics is gathered.</p>
+                                            <p>Projects related to computer graphics.</p>
                                             <footer class="read_more"><a href="graphics.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
@@ -78,8 +78,8 @@
                                 <article class="index_last clear">
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_tools.png" class="rectangle_image" alt="">
                                         <figcaption>
-                                            <h2>Tools/Helpers</h2>
-                                            <p>This category contains a few tools or helpers that are created to help the user with various tasks.</p>
+                                            <h2>Tools</h2>
+                                            <p>Tools that are created to help the user with production.</p>
                                             <footer class="read_more"><a href="tools.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
