@@ -16,20 +16,20 @@
                 <div class="dropdown">
                     <li class="dropbtn"><a href="https://dmctruong.github.io/projects.html">Class Projects</a></li>
                     <div class="dropdown-content">
-                        <a href="https://dmctruong.github.io/projects_bayes.html">Bayes Classifier</a>
+                        <a href="https://dmctruong.github.io/projects_bayes.html">Naive Bayes Classifier</a>
                         <a href="https://dmctruong.github.io/projects_employee.html">Employee Management System</a>
                         <a href="https://dmctruong.github.io/projects_server.html">Server and Client</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <li class="dropbtn"><a href="https://dmctruong.github.io/graphics.html">Graphics</a></li>
+                    <li class="dropbtn"><a href="https://dmctruong.github.io/graphics.html">Graphic Projects</a></li>
                     <div class="dropdown-content">
-                        <a href="https://dmctruong.000webhostapp.com/graphics_pathfinder.html">Project Pathfinder</a>
-                        <a href="https://dmctruong.github.io/graphics_gallery.html">Gallery</a>
+                        <a href="https://dmctruong.000webhostapp.com/graphics_pathfinder.html">X3DOM Project</a>
+                        <a href="https://dmctruong.github.io/graphics_gallery.html">JavaScript Gallery</a>
                     </div>
                 </div>                
                 <div class="dropdown">
-                    <li class="dropbtn"><a href="https://dmctruong.github.io/tools.html">Tools/Helpers</a></li>
+                    <li class="dropbtn"><a href="https://dmctruong.github.io/tools.html">Tools</a></li>
                     <div class="dropdown-content">
                         <a href="https://dmctruong.github.io/tools_scripts.html">Git Bash Scripts</a>
                     </div>
